[package]
name = "moistc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cranelift = "0.107.0"
lalrpop-util = {version="0.20.2", features=["lexer", "unicode"]}

[build-dependencies]
lalrpop = "0.20.2"
