[package]
name = "moistc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cranelift = "0.107.0"
cranelift-module = "0.107.0"
cranelift-object = "0.107.0"
lalrpop-util = {version="0.20.2", features=["lexer", "unicode"]}
memmap2 = "0.9.4"
target-lexicon = "0.12.14"

[build-dependencies]
lalrpop = "0.20.2"
